# img2train

./: .gitignore  README.md  pyproject.toml
src/: img2src.py
